# cmake_dbgsym

./: CMakeLists.txt  readme
cmake_adds/: DbgSym.cmake
src_app/: CMakeLists.txt  main.cpp
src_lib/: CMakeLists.txt  util.cpp  util.h
